# algoritmo_congruencial_multiplicativo_ts

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
